manifests/services/namespaces/grafana/00-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 8111
      name: web
