manifests/services/namespaces/grafana/00-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    environment: extern
    app: grafana
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
    hajimari.io/enable: "true"
    hajimari.io/icon: "chart-line"
spec:
  tls:
    - hosts:
        - grafana.domain.tld
  rules:
    - host: grafana.domain.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 8111
